2009-02-22 Holger Vogt
 * xspice/icm/makefile: *.cm for CYGWIN need to be made executable 
   (755 instead of 644)

2009-02-22 Dietmar Warning
 * devices/adms/mextram: Update to release version 504.7 now with selfheating
   as a 5 terminal version
 * tests/adms/mextram/*.sp: additional parameters for new mextram version needed
 * spicelib/parser/inpgmod.c, inp2q.c: Correct handling of adms 5 terminal models

2009-02-21 Holger Vogt
 * parse.c:922 prevent automtic deletion of @xxx[par]
   winmain.c: increased width of ngspice window to allow display
   of 80 characters per line (e.g. for command 'show'
   /tests/bin/check.sh: allow make check for CYGWIN (will fail though)

2009-02-20 Holger Vogt
 * x11disp.c: allow closing of help windows with WM x-button

2009-02-14 Dietmar Warning
 * src/spicelib/parser/inpdomod.c: map level 10 to bsimsoi4 and map ancient 
   version 4.0 and 4.1 of bsim4 to available version 4.2
 * DEVICES: corrections and actualizations, add short adms model descriptions
 * adms/hicum0/admsva/hicum0.va: a slight fix of TFH in version 1.12
 * adms/hicum2/admsva/hicum2.va: general update to version 2.23

2009-02-12 Dietmar Warning
 * src/include/missing_math.h, src/maths/misc/isinf.c: fix a conflict under
   certain conditions 

2009-02-12 Holger Vogt
 * device.c:908 remove bug: reset i to 0
   x11.c: allow closing of plot windows with WM x-button

2009-02-10 Holger Vogt
 * windisp.c, X11.c, postcom.c
   'destroy plot1' now deletes all graphs (plot windows)
   associated with the plot 'plot1' before the data of plot1
   are deleted, to prevent a crash due to unsuccessful redrawing  
 
2009-02-07 Holger Vogt
 * device.c, inpcom.c
   alter and altermod commands reinstated and improved

2009-02-01 Dietmar Warning
 * alloc.c, outitf.c: exclude heap usage for windows compile under __MINGW__
 * resource.c: meminfo api usage not for commandline version

2009-02-01 Holger Vogt
 * alloc.c, outitf.c: Use the new heap only for tclspice in Windows 