@@ -180,6 +180,7 @@ extern void com_xgraph();
 /* dotcards.c */
 
 extern bool ft_acctprint;
+extern bool ft_noacctprint;
 extern bool ft_listprint;
 extern bool ft_nopage;
 extern bool ft_nomod;
